WIP: Add UnsignedLongBitMap
// FIXME: sort entries
// FIXME: add tests

JIRA: CONTROLLER-2013
Change-Id: Ie64da0af68ea2898dc77368afd4fce8abd2cccea
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>